<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <TextView
        android:id="@+id/tv_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textAlignment="viewEnd"
        android:layout_marginHorizontal="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textAlignment="viewEnd"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toTopOf="@id/view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/op_ocr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_gallery"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_ocr"
        android:layout_width="0dp"
        android:layout_height="72dp"
        style="@style/operatorButton"
        android:text="@string/input"
        app:iconTint="@color/white"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="@id/op_divide"
        app:layout_constraintStart_toStartOf="@id/num_7"
        app:layout_constraintEnd_toEndOf="@id/num_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_clear"
        style="@style/operatorButton"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@id/op_divide"
        app:layout_constraintStart_toEndOf="@id/num_9"
        app:layout_constraintEnd_toStartOf="@id/num_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_divide"
        style="@style/operatorButton"
        android:text="@string/divide"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/op_multiply"
        app:layout_constraintStart_toStartOf="@id/op_multiply"
        app:layout_constraintEnd_toEndOf="@id/op_multiply" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_7"
        style="@style/roundButton"
        android:text="@string/_7"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/num_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_8"
        style="@style/roundButton"
        android:text="@string/_8"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_multiply"
        app:layout_constraintStart_toEndOf="@id/num_7"
        app:layout_constraintEnd_toStartOf="@id/num_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_9"
        style="@style/roundButton"
        android:text="@string/_9"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_multiply"
        app:layout_constraintStart_toEndOf="@id/num_8"
        app:layout_constraintEnd_toStartOf="@id/op_multiply" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_multiply"
        style="@style/operatorButton"
        android:layout_marginBottom="20dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@id/op_subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toEndOf="@id/num_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_4"
        style="@style/roundButton"
        android:text="@string/_4"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_subtract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/num_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_5"
        style="@style/roundButton"
        android:text="@string/_5"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_subtract"
        app:layout_constraintStart_toEndOf="@id/num_4"
        app:layout_constraintEnd_toStartOf="@id/num_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_6"
        style="@style/roundButton"
        android:text="@string/_6"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_subtract"
        app:layout_constraintStart_toEndOf="@id/num_5"
        app:layout_constraintEnd_toStartOf="@id/op_subtract" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_subtract"
        style="@style/operatorButton"
        android:text="@string/subtract"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/op_add"
        app:layout_constraintStart_toEndOf="@id/num_6"
        app:layout_constraintEnd_toEndOf="parent" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_1"
        style="@style/roundButton"
        android:text="@string/_1"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/num_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_2"
        style="@style/roundButton"
        android:text="@string/_2"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_add"
        app:layout_constraintStart_toEndOf="@id/num_1"
        app:layout_constraintEnd_toStartOf="@id/num_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_3"
        style="@style/roundButton"
        android:text="@string/_3"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_add"
        app:layout_constraintStart_toEndOf="@id/num_2"
        app:layout_constraintEnd_toStartOf="@id/op_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_add"
        style="@style/operatorButton"
        android:text="@string/add"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/op_result"
        app:layout_constraintStart_toEndOf="@id/num_3"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/num_0"
        style="@style/roundButton"
        android:text="@string/_0"
        android:onClick="onDigitClick"
        app:layout_constraintBottom_toBottomOf="@id/op_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/op_point" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_point"
        style="@style/roundButton"
        android:text="@string/point"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/op_result"
        app:layout_constraintStart_toEndOf="@id/num_0"
        app:layout_constraintEnd_toStartOf="@id/op_backspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_backspace"
        style="@style/operatorButton"
        app:icon="@drawable/ic_backspace"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/op_result"
        app:layout_constraintStart_toEndOf="@id/op_point"
        app:layout_constraintEnd_toStartOf="@id/op_result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/op_result"
        style="@style/operatorButton"
        android:text="@string/result"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/op_backspace"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:translationZ="100dp"
        android:background="@color/blackTransparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:progressTint="@color/secondary"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>